--- a/src/html/busForm.html
+++ b/src/html/busForm.html
@@ -20,7 +20,7 @@
                 <div class="error-box"></div>
             </div>
         </div>
-        <div v-on:click="swapbusDest()" class="swap"><div class="arrows"></div></div>
+        <div v-on:click="swapBusDest()" class="swap"><div class="arrows"></div></div>
         <div class="field station to">
             <label data-local="true" data-localtext="FROM" class="menu-title">
                 <span class="link-left"></span>
