--- a/src/html/busForm.html
+++ b/src/html/busForm.html
@@ -65,7 +65,7 @@
                 <span class="link-right"></span>
             </label>
             <div class="control-field">
-                <div class="pass_counter">
+                <div class="pass_counter pass_counter-top">
                     <div class="remove_pass" v-on:click="removeBusPassenger()"></div>
                     <div class="count_pass"><span>{{buses.passenger.count}}</span></div>
                     <div class="add_pass" v-on:click="addBusPassenger()"></div>
