fix top form passenger block

--- a/src/html/busForm.html
+++ b/src/html/busForm.html
@@ -64,7 +64,7 @@
                 {{locale("PASSENGERS")}}
                 <span class="link-right"></span>
             </label>
-            <div class="control-field">
+            <div class="control-field bus_pass">
                 <div class="pass_counter pass_counter-top">
                     <div class="remove_pass" v-on:click="removeBusPassenger()"></div>
                     <div class="count_pass"><span>{{buses.passenger.count}}</span></div>
