Валидация поля пункта отправки для ЖД rezon-support/issues-tracker#2009

--- a/src/html/railForm.html
+++ b/src/html/railForm.html
@@ -16,7 +16,7 @@
                 <span class="link-right"></span>
             </label>
             <div class="control-field">
-                <railway-input name="tshi_station_from" input-class="book-from" v-model="railway.stationFrom" :placeholder="locale('RAILWAY_PLACEHOLDER')" input-class="book-from"></railway-input>
+                <railway-input name="tshi_station_from" input-class="book-from" v-model="railway.stationFrom" :placeholder="locale('RAILWAY_PLACEHOLDER')"></railway-input>
                 <div class="error-box"></div>
             </div>
         </div>
