--- a/src/html/hotelForm.html
+++ b/src/html/hotelForm.html
@@ -48,7 +48,7 @@
                 <div class="select_box">
                     <div class="value_tag">
                         <span class="number_val">1</span>
-                        <input class="input_val" type="hidden"  value="">
+                        <input class="input_val" type="hidden" name="Adults" value="">
                     </div>
                     <ul class="option_box"></ul>
                 </div>
@@ -69,14 +69,61 @@
                     <div class="children_box option_box">
                         <div class="children_box-item">
                             <label class="children-title">
-                                Возраст 1 ребенка
+                                {{locale("Возраст 1 ребенка")}}
                             </label>
                             <div class="children_input">
                                 <span class="number_val">&mdash;</span>
                                 <input class="input_val" type="hidden"  value="">
                             </div>
                             <ul class="children_age">
-                                <li class="option">&mdash;</li>
+                                <li class="option">Меньше года</li>
+                                <li class="option">1 год</li>
+                                <li class="option">2 года</li>
+                                <li class="option">3 года</li>
+                                <li class="option">4 года</li>
+                                <li class="option">5 лет</li>
+                                <li class="option">6 лет</li>
+                                <li class="option">7 лет</li>
+                                <li class="option">8 лет</li>
+                                <li class="option">9 лет</li>
+                                <li class="option">10 лет</li>
+                                <li class="option">11 лет</li>
+                                <li class="option">12 лет</li>
+                            </ul>
+                        </div>
+                        <div class="children_box-item">
+                            <label class="children-title">
+                                {{locale("Возраст 2 ребенка")}}
+                            </label>
+                            <div class="children_input">
+                                <span class="number_val">&mdash;</span>
+                                <input class="input_val" type="hidden"  value="">
+                            </div>
+                            <ul class="children_age">
+                                <li class="option">Меньше года</li>
+                                <li class="option">1 год</li>
+                                <li class="option">2 года</li>
+                                <li class="option">3 года</li>
+                                <li class="option">4 года</li>
+                                <li class="option">5 лет</li>
+                                <li class="option">6 лет</li>
+                                <li class="option">7 лет</li>
+                                <li class="option">8 лет</li>
+                                <li class="option">9 лет</li>
+                                <li class="option">10 лет</li>
+                                <li class="option">11 лет</li>
+                                <li class="option">12 лет</li>
+                            </ul>
+                        </div>
+                        <div class="children_box-item">
+                            <label class="children-title">
+                                {{locale("Возраст 3 ребенка")}}
+                            </label>
+                            <div class="children_input">
+                                <span class="number_val">&mdash;</span>
+                                <input class="input_val" type="hidden"  value="">
+                            </div>
+                            <ul class="children_age">
                                 <li class="option">Меньше года</li>
                                 <li class="option">1 год</li>
                                 <li class="option">2 года</li>
@@ -99,22 +146,22 @@
                 </div>
             </div>
         </div>
-        <div class="field num_room">
-            <label class="menu-title">
-                <span class="link-left"></span>
-                {{locale("Rooms")}}
-                <span class="link-right"></span>
-            </label>
-            <div class="control-field">
-                <div class="select_box">
-                    <div class="value_tag">
-                        <span class="number_val">1</span>
-                        <input class="input_val" type="hidden"  value="">
-                    </div>
-                    <ul class="option_box"></ul>
-                </div>
-            </div>
-        </div>
+        <!--<div class="field num_room">-->
+            <!--<label class="menu-title">-->
+                <!--<span class="link-left"></span>-->
+                <!--{{locale("Rooms")}}-->
+                <!--<span class="link-right"></span>-->
+            <!--</label>-->
+            <!--<div class="control-field">-->
+                <!--<div class="select_box">-->
+                    <!--<div class="value_tag">-->
+                        <!--<span class="number_val">1</span>-->
+                        <!--<input class="input_val" type="hidden"  value="">-->
+                    <!--</div>-->
+                    <!--<ul class="option_box"></ul>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="field nationality_hotels">
             <label class="menu-title">
                 <span class="link-left"></span>
