--- a/src/html/hotelForm.html
+++ b/src/html/hotelForm.html
@@ -50,7 +50,9 @@
                         <span class="number_val">{{hotel.adults}}</span>
                         <input class="input_val" type="hidden" name="Adults" v-model="hotel.adults">
                     </div>
-                    <ul class="option_box" v-on:click="fieldOption"></ul>
+                    <ul class="option_box" v-on:click="fieldOption">
+                        <li class="option" v-for="i in 4">{{ i }}</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -67,74 +69,16 @@
                         <input class="input_quantity" type="hidden"  value="">
                     </div>
                     <div class="children_box option_box" v-on:click="stopClick">
-                        <div class="children_box-item">
+                        <div class="children_box-item" v-for="n in 3">
                             <label class="children-title">
-                                {{locale("Возраст 1 ребенка")}}
+                                Возраст {{ n }} ребенка
                             </label>
                             <div class="children_input" v-on:click="toggleClassChild">
-                                <span class="number_val">&mdash;</span>
+                                <span class="number_val" :child="n">&mdash;</span>
                                 <input class="input_val" type="hidden"  value="">
                             </div>
-                            <ul class="children_age">
-                                <li class="option">1 год</li>
-                                <li class="option">2 года</li>
-                                <li class="option">3 года</li>
-                                <li class="option">4 года</li>
-                                <li class="option">5 лет</li>
-                                <li class="option">6 лет</li>
-                                <li class="option">7 лет</li>
-                                <li class="option">8 лет</li>
-                                <li class="option">9 лет</li>
-                                <li class="option">10 лет</li>
-                                <li class="option">11 лет</li>
-                                <li class="option">12 лет</li>
-                            </ul>
-                        </div>
-                        <div class="children_box-item">
-                            <label class="children-title">
-                                {{locale("Возраст 2 ребенка")}}
-                            </label>
-                            <div class="children_input" v-on:click="toggleClassChild">
-                                <span class="number_val">&mdash;</span>
-                                <input class="input_val" type="hidden"  value="">
-                            </div>
-                            <ul class="children_age">
-                                <li class="option">Меньше года</li>
-                                <li class="option">1 год</li>
-                                <li class="option">2 года</li>
-                                <li class="option">3 года</li>
-                                <li class="option">4 года</li>
-                                <li class="option">5 лет</li>
-                                <li class="option">6 лет</li>
-                                <li class="option">7 лет</li>
-                                <li class="option">8 лет</li>
-                                <li class="option">9 лет</li>
-                                <li class="option">10 лет</li>
-                                <li class="option">11 лет</li>
-                                <li class="option">12 лет</li>
-                            </ul>
-                        </div>
-                        <div class="children_box-item">
-                            <label class="children-title">
-                                {{locale("Возраст 3 ребенка")}}
-                            </label>
-                            <div class="children_input" v-on:click="toggleClassChild">
-                                <span class="number_val">&mdash;</span>
-                                <input class="input_val" type="hidden"  value="">
-                            </div>
-                            <ul class="children_age">
-                                <li class="option">1 год</li>
-                                <li class="option">2 года</li>
-                                <li class="option">3 года</li>
-                                <li class="option">4 года</li>
-                                <li class="option">5 лет</li>
-                                <li class="option">6 лет</li>
-                                <li class="option">7 лет</li>
-                                <li class="option">8 лет</li>
-                                <li class="option">9 лет</li>
-                                <li class="option">10 лет</li>
-                                <li class="option">11 лет</li>
-                                <li class="option">12 лет</li>
+                            <ul class="children_age" v-on:click="childOption">
+                                <li class="option" v-for="i in 12">{{ i }} год</li>
                             </ul>
                         </div>
                         <span class="button-hide hidden-xs">
@@ -144,22 +88,6 @@
                 </div>
             </div>
         </div>
-        <!--<div class="field num_room">-->
-            <!--<label class="menu-title">-->
-                <!--<span class="link-left"></span>-->
-                <!--{{locale("Rooms")}}-->
-                <!--<span class="link-right"></span>-->
-            <!--</label>-->
-            <!--<div class="control-field">-->
-                <!--<div class="select_box">-->
-                    <!--<div class="value_tag">-->
-                        <!--<span class="number_val">1</span>-->
-                        <!--<input class="input_val" type="hidden"  value="">-->
-                    <!--</div>-->
-                    <!--<ul class="option_box"></ul>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
         <div class="field nationality_hotels">
             <label class="menu-title">
                 <span class="link-left"></span>
